--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -24,3 +24,11 @@ table {
             padding: 10px;
             text-align: center;
 }
+
+ul {
+    list-style: none;
+}
+
+font {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
