--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -7,9 +7,37 @@
 </head>
 <body>
 <h1>My Super Fancy Spa</h1>
+
 <div id = "clientProfile">
+    <h1>My profile</h1>
+    <p th:text="${name}">hello</p>
+    <p th:text="${skintype}"></p>
+    <p th:text="${manipedi}"></p>
 </div>
+
 <div id = "servicesMenu">
+    <h1>Menu of Available Services</h1>
+
+    <h3>Facial Treatments</h3>
+
+    <p>The facial treatments below are recommended by our estheticians for your given skin type.</p>
+
+    <th:block>
+            <ul>
+                <li th:each="facial : ${facials}" th:text="${facial}"></li>
+            </ul>
+    </th:block>
+
+
+    <div th:if= "${manipedi} == 'manicure'">
+        <h3 th:text="${manipedi}"></h3>
+        <p th:replace= "fragments :: manicureDescription"></p>
+    </div>
+    <div th:unless = "${manipedi} == 'manicure'">
+        <h3 th:text="${manipedi}"></h3>
+        <p th:replace = "fragments :: pedicureDescription">
+    </div>
+
 </div>
 </body>
 </html>
